platform/pi-hole/service.yaml
---
# Service para pihole (servidor externo al cluster)
apiVersion: v1
kind: Service
metadata:
  name: pihole-external
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 80
    targetPort: 80
    protocol: TCP
---
# Endpoints apuntando al servidor pihole externo
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole-external
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "1"
subsets:
  - addresses:
      - ip: 192.168.0.3  # IP del servidor pihole
    ports:
      - name: https
        port: 8006
        protocol: TCP
